--- a/Kitana/app/src/main/res/values/strings.xml
+++ b/Kitana/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="local_date_and_time_select_time">Select Time</string>
     <string name="local_date_and_time_utc">UTC:</string>
     <string name="local_date_and_time_julian_day">Julian Day:</string>
+    <string name="local_date_and_time_use_current_time">Use Current Time</string>
 </resources>
